# SimPL

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  package_manager.py  setup.py  simpl.py
.github/workflows/: release.yml
core/: __init__.py  helper.py  js_bridge.py  lexer.py  parser.py  tui.py
examples/: demo.simpl  fibonacci.simpl  flavor_test.simpl  full_demo.simpl  hello.simpl  real_world.simpl  test_install.simpl  test_npm.simpl  todo.simpl
src/: main.rs
src/error/: mod.rs  reporter.rs
src/interpreter/: mod.rs  values.rs
src/lexer/: flavor.rs  mod.rs  token.rs
src/package/: installer.rs  mod.rs  registry.rs
src/parser/: ast.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
