[package]
name = "simpl"
version = "1.0.0"
edition = "2021"
description = "SimPL - A simple, powerful programming language"
authors = ["TheStrongestOfTomorrow"]
license = "MIT"

[[bin]]
name = "simpl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = "0.4"
colored = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
